SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/AWS_PRICING_EC2_COMPUTE__c.object
<CustomObject>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <label>Instance_Type</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OnDemand_hourly_cost__c</fullName>
        <label>OnDemand_hourly_cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <label>Payment_Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_model__c</fullName>
        <label>Pricing_model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_term__c</fullName>
        <label>Reservation_term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1YR_Std_reserved_hourly_cost__c</fullName>
        <label>1YR_Std_reserved_hourly_cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>AWS_PRICING_EC2_COMPUTE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Platform__c</columns>
        <columns>Instance_Type__c</columns>
        <columns>OnDemand_hourly_cost__c</columns>
        <columns>X1YR_Std_reserved_hourly_cost__c</columns>
        <columns>Pricing_model__c</columns>
        <columns>Reservation_term__c</columns>
        <columns>Payment_Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>AWS_PRICING_EC2_COMPUTE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS_PRICING_EC2_COMPUTE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>